He hecho una página con fondo.

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -5,5 +5,6 @@
     <body>
         <h1>Adrián Mathias Fernández Luyo</h1>
         <h2>Student & Developer</h2>
+        <p>Hola, me presento soy un desarrollador de software, estoy estudiando por las noches en cibertec y por el día me preparo para ingresar a la Universidad nacional de ing.</p>
     </body>
 </html>
