--- a/01_MENU/index.html
+++ b/01_MENU/index.html
@@ -12,7 +12,7 @@
             <li><a href="#">Quiénes Somos</a></li>
             <li><a href="#">Catálogo</a></li>
             <li><a href="#">Ofertas</a></li>
-            <li><a href="#">Contáctanos</a></li>
+            <li><a href="#">Contáctanosx</a></li>
         </ul>
     </nav>
 </body>
